// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Simply check if all components are imported and exported correctly 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #383d41;
  background-color: #e2e3e5;
  border-color: #b4b5b7;
}

.c0 > a {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

.c0 > hr {
  border-top-color: #b4b5b7;
}

.c0 > a,
.c0 > a:hover {
  color: #383d41;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 2`] = `
.c0 {
  display: inline-block;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  position: relative;
  top: -1px;
  border-radius: 0.25rem;
  padding: 0.25rem 0.4rem;
  color: #fff;
  background-color: #6c757d;
}

.c0:empty {
  display: none;
}

.c0 > a {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6c757d;
}

<span
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 3`] = `
"
  *,
  *::before,
  *::after {
    box-sizing: border-box;
  }

  html {
    font-family: sans-serif;
    line-height: 1.15;
    -webkit-text-size-adjust: 100%;
    -ms-overflow-style: scrollbar;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
    display: block;
  }

  body {
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, Noto Sans, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\", \\"Noto Color Emoji\\";
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    color: #212529;
    text-align: left;
    background-color: #fff;
  }

  [tabindex=\\"-1\\"]:focus {
    outline: 0 !important;
  }

  hr {
    box-sizing: content-box;
    height: 0;
    overflow: visible;
  }

  h1, h2, h3, h4, h5, h6 {
    margin-top: 0;
    margin-bottom: 0.5rem;
  }

  p {
    margin-top: 0;
    margin-bottom: 1rem;
  }

  abbr[title],
  abbr[data-original-title] {
    text-decoration: underline;
    -webkit-text-decoration: underline dotted;
    text-decoration: underline dotted;
    cursor: help;
    border-bottom: 0;
    text-decoration-skip-ink: none;
  }

  address {
    margin-bottom: 1rem;
    font-style: normal;
    line-height: inherit;
  }

  ol,
  ul,
  dl {
    margin-top: 0;
    margin-bottom: 1rem;
  }

  ol ol,
  ul ul,
  ol ul,
  ul ol {
    margin-bottom: 0;
  }

  dt {
    font-weight: 700;
  }

  dd {
    margin-bottom: .5rem;
    margin-left: 0;
  }

  blockquote {
    margin: 0 0 1rem;
  }

  b,
  strong {
    font-weight: bolder;
  }

  small {
    font-size: 80%;
  }

  sub,
  sup {
    position: relative;
    font-size: 75%;
    line-height: 0;
    vertical-align: baseline;
  }

  sub {
    bottom: -.25em;
  }

  sup {
    top: -.5em;
  }

  a {
    color: #007bff;
    text-decoration: none;
    background-color: transparent;
  }

  a:hover {
    color: #0056b3;
    text-decoration: underline;
  }

  a:not([href]):not([tabindex]) {
    color: inherit;
    text-decoration: none;
  }

  a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {
    color: inherit;
    text-decoration: none;
  }

  a:not([href]):not([tabindex]):focus {
    outline: 0;
  }

  pre,
  code,
  kbd,
  samp {
    font-family: SFMono-Regular, Menlo, Monaco, Consolas, \\"Liberation Mono\\", \\"Courier New\\", monospace;
    font-size: 1em;
  }

  pre {
    margin-top: 0;
    margin-bottom: 1rem;
    overflow: auto;
    -ms-overflow-style: scrollbar;
  }

  figure {
    margin: 0 0 1rem;
  }

  img {
    vertical-align: middle;
    border-style: none;
  }

  svg {
    overflow: hidden;
    vertical-align: middle;
  }

  table {
    border-collapse: collapse;
  }

  caption {
    padding-top: 0.75rem;
    padding-bottom: 0.75rem;
    color: #6c757d;
    text-align: left;
    caption-side: bottom;
  }

  th {
    text-align: inherit;
  }

  label {
    display: inline-block;
    margin-bottom: 0.5rem;
  }

  button {
    border-radius: 0;
  }

  button:focus {
    outline: 1px dotted;
    outline: 5px auto -webkit-focus-ring-color;
  }

  input,
  button,
  select,
  optgroup,
  textarea {
    margin: 0;
    font-family: inherit;
    font-size: inherit;
    line-height: inherit;
  }

  button,
  input {
    overflow: visible;
  }

  button,
  select {
    text-transform: none;
  }

  button,
  [type=\\"button\\"],
  [type=\\"reset\\"],
  [type=\\"submit\\"] {
    -webkit-appearance: button;
  }

  button::-moz-focus-inner,
  [type=\\"button\\"]::-moz-focus-inner,
  [type=\\"reset\\"]::-moz-focus-inner,
  [type=\\"submit\\"]::-moz-focus-inner {
    padding: 0;
    border-style: none;
  }

  input[type=\\"radio\\"],
  input[type=\\"checkbox\\"] {
    box-sizing: border-box;
    padding: 0;
  }

  input[type=\\"date\\"],
  input[type=\\"time\\"],
  input[type=\\"datetime-local\\"],
  input[type=\\"month\\"] {
    -webkit-appearance: listbox;
  }

  textarea {
    overflow: auto;
    resize: vertical;
  }

  fieldset {
    min-width: 0;
    padding: 0;
    margin: 0;
    border: 0;
  }

  legend {
    display: block;
    width: 100%;
    max-width: 100%;
    padding: 0;
    margin-bottom: .5rem;
    font-size: 1.5rem;
    line-height: inherit;
    color: inherit;
    white-space: normal;
  }

  progress {
    vertical-align: baseline;
  }

  [type=\\"number\\"]::-webkit-inner-spin-button,
  [type=\\"number\\"]::-webkit-outer-spin-button {
    height: auto;
  }

  [type=\\"search\\"] {
    outline-offset: -2px;
    -webkit-appearance: none;
  }

  [type=\\"search\\"]::-webkit-search-decoration {
    -webkit-appearance: none;
  }

  ::-webkit-file-upload-button {
    font: inherit;
    -webkit-appearance: button;
  }

  output {
    display: inline-block;
  }

  summary {
    display: list-item;
    cursor: pointer;
  }

  template {
    display: none;
  }

  h1, h2, h3, h4, h5, h6 {
    margin-bottom: 0.5rem;
    font-family: inherit;
    font-weight: 500;
    line-height: 1.2;
    color: inherit;
  }

  h1 {
    font-size: 2.5rem;
  }

  h2 {
    font-size: 2rem;
  }

  h3 {
    font-size: 1.75rem;
  }

  h4 {
    font-size: 1.5rem;
  }

  h5 {
    font-size: 1.25rem;
  }

  h6 {
    font-size: 1rem;
  }

  hr {
    margin-top: 1rem;
    margin-bottom: 1rem;
    border: 0;
    border-top: 1px solid rgba(0, 0, 0, 0.1);
  }

  small {
    font-size: 80%;
    font-weight: 400;
  }

  mark {
    padding: 0.2em;
    background-color: #fcf8e3;
  }
"
`;

exports[`Simply check if all components are imported and exported correctly 4`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0.75rem 1rem;
  margin-bottom: 1rem;
  list-style: none;
  background-color: #e2e6ea;
  border-radius: 0.25rem;
}

<ol
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 5`] = `
.c1:not(:first-child)::before {
  display: inline-block;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
  color: #6c757d;
  content: "/";
}

.c1 + .c0:hover::before {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<li
  className="c0 c1"
/>
`;

exports[`Simply check if all components are imported and exported correctly 6`] = `
.c0 {
  font-weight: 400;
  line-height: 1.5;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  border: 1px solid #6c757d;
  background-color: #6c757d;
  border-radius: 0.25rem;
  display: inline-block;
  font-size: 1rem;
  color: #fff;
  padding: 0.375rem 0.75rem;
}

.c0:focus {
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(108,117,125,0.5);
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #6c757d;
  background-color: #6c757d;
  color: #fff;
  cursor: pointer;
}

.c0:hover:focus,
.c0:focus:focus,
.c0:hover:hover,
.c0:focus:hover {
  border: 1px solid #4e555b;
}

.c0:hover:focus,
.c0:focus:focus,
.c0:hover:hover,
.c0:focus:hover {
  background-color: #5a6268;
}

.c0:focus,
.c0:hover {
  border: 1px solid #4e555b;
}

.c0:focus,
.c0:hover {
  background-color: #5a6268;
}

<button
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 7`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
}

.c0 > button {
  line-height: 1.5;
  position: relative;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
}

.c0 > button:hover {
  z-index: 1;
}

.c0 > button:not(:last-child) {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c0 > button:not(:first-child) {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 8`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: auto;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 9`] = `
.c0 {
  height: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0;
  word-wrap: break-word;
  background-color: #fff;
  background-clip: border-box;
  border: 1px solid rgba(0,0,0,0.2);
  border-radius: 0.25rem;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 10`] = `
.c0 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 1.25rem;
}

.c0 > a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a + a {
  margin-left: 1.25rem;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 11`] = `
.c0 {
  padding: 0.75rem 1.25rem;
  background-color: rgba(0,0,0,0.05);
  border-top: 1px solid rgba(0,0,0,0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: -3px;
}

.c0:last-child {
  border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px);
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 12`] = `
.c0 {
  padding: 0.75rem 1.25rem;
  background-color: #fff;
  border-bottom: 1px solid rgba(0,0,0,0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-top-left-radius: calc(0.25rem - 1px);
  border-top-right-radius: calc(0.25rem - 1px);
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 13`] = `
.c0 {
  width: 100%;
  border-top-left-radius: calc(0.25rem - 1px);
  border-top-right-radius: calc(0.25rem - 1px);
}

<img
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 14`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 1rem;
}

.c0:last-child {
  margin-bottom: 0;
}

<p
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 15`] = `
.c0 {
  margin-bottom: 0.5rem;
}

<h4
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 16`] = `"{\\"colorScheme\\":{\\"primaryLight\\":\\"#cce5ff\\",\\"primaryLighter\\":\\"#9cc9fb\\",\\"primary\\":\\"#007bff\\",\\"primaryDarker\\":\\"#0069d9\\",\\"primaryDark\\":\\"#005cbf\\",\\"primaryDarkest\\":\\"#004085\\",\\"primaryBoxShadow\\":\\"rgba(0, 123, 255, 0.5)\\",\\"secondaryLight\\":\\"#e2e3e5\\",\\"secondaryLighter\\":\\"#b4b5b7\\",\\"secondary\\":\\"#6c757d\\",\\"secondaryDarker\\":\\"#5a6268\\",\\"secondaryDark\\":\\"#4e555b\\",\\"secondaryDarkest\\":\\"#383d41\\",\\"secondaryBoxShadow\\":\\"rgba(108, 117, 125, 0.5)\\",\\"successLight\\":\\"#d4edda\\",\\"successLighter\\":\\"#72d889\\",\\"success\\":\\"#28a745\\",\\"successDarker\\":\\"#218838\\",\\"successDark\\":\\"#1c7430\\",\\"successDarkest\\":\\"#155724\\",\\"successBoxShadow\\":\\"rgba(40, 167, 69, 0.5)\\",\\"dangerLight\\":\\"#f8d7da\\",\\"dangerLighter\\":\\"#f5b4bb\\",\\"danger\\":\\"#dc3545\\",\\"dangerDarker\\":\\"#c82333\\",\\"dangerDark\\":\\"#b21f2d\\",\\"dangerDarkest\\":\\"#721c24\\",\\"dangerBoxShadow\\":\\"rgba(220, 53, 69, 0.5)\\",\\"warningLight\\":\\"#fff3cd\\",\\"warningLighter\\":\\"#f3da8d\\",\\"warning\\":\\"#ffc107\\",\\"warningDarker\\":\\"#e0a800\\",\\"warningDark\\":\\"#c69500\\",\\"warningDarkest\\":\\"#856404\\",\\"warningBoxShadow\\":\\"rgba(255, 193, 7, 0.5)\\",\\"infoLight\\":\\"#d1ecf1\\",\\"infoLighter\\":\\"#a3d6de\\",\\"info\\":\\"#17a2b8\\",\\"infoDarker\\":\\"#138496\\",\\"infoDark\\":\\"#12707f\\",\\"infoDarkest\\":\\"#10707f\\",\\"infoBoxShadow\\":\\"rgba(23, 162, 184, 0.5)\\",\\"lightLight\\":\\"#fefefe\\",\\"lightLighter\\":\\"#fdfdfe\\",\\"light\\":\\"#f0f0f0\\",\\"lightDarker\\":\\"#e2e6ea\\",\\"lightDark\\":\\"#cccecf\\",\\"lightDarkest\\":\\"#343a40\\",\\"lightBoxShadow\\":\\"rgba(248, 249, 250, 0.5)\\",\\"darkLight\\":\\"#d6d8d9\\",\\"darkLighter\\":\\"#abaeb1\\",\\"dark\\":\\"#343a40\\",\\"darkDarker\\":\\"#23272b\\",\\"darkDark\\":\\"#201a1d\\",\\"darkDarkest\\":\\"#171a1d\\",\\"darkBoxShadow\\":\\"rgba(52, 58, 64, 0.5)\\",\\"darkerLight\\":\\"#4d4f50\\",\\"darkerLighter\\":\\"#3c3e40\\",\\"darker\\":\\"#2d2f31\\",\\"darkerDarker\\":\\"#212529\\",\\"darkerDark\\":\\"#16181b\\",\\"darkerBoxShadow\\":\\"rgba(0, 0, 0, 0.15)\\",\\"white\\":\\"#fff\\",\\"whiteDarker\\":\\"#f4f4f4\\",\\"whiteDark\\":\\"#ececec\\",\\"transparent\\":\\"transparent\\",\\"white90Alpha\\":\\"rgba(255, 255, 255, 0.9)\\",\\"white75Alpha\\":\\"rgba(255, 255, 255, 0.75)\\",\\"white50Alpha\\":\\"rgba(255, 255, 255, 0.5)\\",\\"white25Alpha\\":\\"rgba(255, 255, 255, 0.25)\\",\\"white10Alpha\\":\\"rgba(255, 255, 255, 0.1)\\",\\"dark90Alpha\\":\\"rgba(0, 0, 0, 0.9)\\",\\"dark75Alpha\\":\\"rgba(0, 0, 0, 0.75)\\",\\"dark50Alpha\\":\\"rgba(0, 0, 0, 0.5)\\",\\"dark25Alpha\\":\\"rgba(0, 0, 0, 0.25)\\",\\"dark10Alpha\\":\\"rgba(0, 0, 0, 0.1)\\",\\"white90Transparent\\":\\"rgba(255, 255, 255, 0.9)\\",\\"whiteHalfTransparent\\":\\"rgba(255, 255, 255, 0.5)\\",\\"whiteQuarterTransparent\\":\\"rgba(255, 255, 255, 0.25)\\",\\"whiteTenthTransparent\\":\\"rgba(255, 255, 255, 0.1)\\",\\"dark90Transparent\\":\\"rgba(0, 0, 0, 0.9)\\",\\"darkHalfTransparent\\":\\"rgba(0, 0, 0, 0.5)\\",\\"darkQuarterTransparent\\":\\"rgba(0, 0, 0, 0.25)\\",\\"darkTenthTransparent\\":\\"rgba(0, 0, 0, 0.1)\\",\\"weakBorder\\":\\"rgba(0, 0, 0, 0.2)\\",\\"weakBackground\\":\\"rgba(0, 0, 0, 0.05)\\"},\\"alert\\":{\\"colors\\":{\\"primary\\":{},\\"secondary\\":{},\\"success\\":{},\\"danger\\":{},\\"warning\\":{},\\"info\\":{},\\"light\\":{},\\"dark\\":{}},\\"margin\\":{\\"bottom\\":\\"1rem\\"},\\"padding\\":{\\"default\\":\\"0.75rem 1.25rem\\",\\"dismissibleRight\\":\\"4rem\\"},\\"border\\":{\\"default\\":\\"1px solid transparent\\"},\\"fontWeight\\":{\\"default\\":\\"700\\"}},\\"badge\\":{\\"colors\\":{\\"primary\\":{},\\"secondary\\":{},\\"success\\":{},\\"danger\\":{},\\"warning\\":{},\\"info\\":{},\\"light\\":{},\\"dark\\":{}},\\"padding\\":{\\"pill\\":\\"0.25rem 0.6rem\\",\\"default\\":\\"0.25rem 0.4rem\\"},\\"fontWeight\\":{\\"default\\":\\"700\\"}},\\"breadcrumb\\":{\\"colors\\":{\\"default\\":{}},\\"padding\\":{\\"default\\":\\"0.75rem 1rem\\"},\\"margin\\":{\\"bottom\\":\\"1rem\\"}},\\"breadcrumbItem\\":{\\"colors\\":{\\"default\\":{}},\\"padding\\":{\\"right\\":\\"0.5rem\\",\\"left\\":\\"0.5rem\\"},\\"margin\\":{\\"bottom\\":\\"1rem\\"}},\\"button\\":{\\"colors\\":{\\"primary\\":{},\\"secondary\\":{},\\"success\\":{},\\"danger\\":{},\\"warning\\":{},\\"info\\":{},\\"light\\":{\\"toggle\\":{}},\\"dark\\":{\\"toggle\\":{}}},\\"margin\\":{\\"blockTop\\":\\"0.5rem\\",\\"dropDownToggleLeft\\":\\"0255rem\\"},\\"padding\\":{\\"sm\\":\\"0.25rem 0.5rem\\",\\"lg\\":\\"0.5rem 1rem\\",\\"default\\":\\"0.375rem 0.75rem\\",\\"splitSmRight\\":\\"0.375rem\\",\\"splitSmLeft\\":\\"0.375rem\\",\\"splitLgRight\\":\\"0.75rem\\",\\"splitLgLeft\\":\\"0.75rem\\",\\"splitDefaultRight\\":\\"0.5625rem\\",\\"splitDefaultLeft\\":\\"0.5625rem\\"}},\\"buttonGroup\\":{},\\"card\\":{\\"colors\\":{\\"default\\":{}}},\\"cardBody\\":{\\"padding\\":{\\"default\\":\\"1.25rem\\"},\\"margin\\":{\\"leftA\\":\\"1.25rem\\"}},\\"cardFooter\\":{\\"colors\\":{\\"default\\":{}},\\"padding\\":{\\"default\\":\\"0.75rem 1.25rem\\"},\\"borderRadius\\":{\\"default\\":\\"0 0 calc(0.25rem - 1px) calc(0.25rem - 1px)\\"}},\\"cardHeader\\":{\\"colors\\":{\\"default\\":{}},\\"padding\\":{\\"default\\":\\"0.75rem 1.25rem\\"},\\"borderRadius\\":{\\"topLeftRight\\":\\"calc(0.25rem - 1px)\\"}},\\"cardImageHeader\\":{\\"borderRadius\\":{\\"topLeftRight\\":\\"calc(0.25rem - 1px)\\"}},\\"cardText\\":{\\"margin\\":{\\"top\\":\\"0\\",\\"bottom\\":\\"1rem\\",\\"lastChildBottom\\":\\"0\\"}},\\"cardTitle\\":{\\"colors\\":{\\"default\\":{}},\\"margin\\":{\\"bottom\\":\\"0.5rem\\",\\"subtitleTop\\":\\"-0.5rem\\",\\"subtitleBottom\\":\\"0.5rem\\"}},\\"container\\":{\\"width\\":{\\"default\\":\\"100%\\",\\"fluid\\":{\\"sm\\":\\"540px\\",\\"md\\":\\"720px\\",\\"lg\\":\\"960px\\",\\"xl\\":\\"1140px\\"}},\\"fontSize\\":{\\"default\\":\\"1rem\\"},\\"fontWeight\\":{\\"default\\":\\"400\\"},\\"fontFamily\\":{\\"default\\":\\"-apple-system, BlinkMacSystemFont, \\\\\\"Segoe UI\\\\\\", Roboto, \\\\\\"Helvetica Neue\\\\\\", Arial, sans-serif, \\\\\\"Apple Color Emoji\\\\\\", \\\\\\"Segoe UI Emoji\\\\\\", \\\\\\"Segoe UI Symbol\\\\\\"\\"}},\\"dropdownDivider\\":{\\"colors\\":{\\"default\\":{}},\\"padding\\":{\\"top\\":\\"0.5rem\\"},\\"margin\\":{\\"top\\":\\"0.6rem\\"}},\\"dropdownItem\\":{\\"colors\\":{\\"default\\":{}},\\"fontWeight\\":{\\"default\\":\\"400\\"},\\"padding\\":{\\"default\\":\\"0.25rem 1.5rem\\"}},\\"dropdownMenu\\":{\\"colors\\":{\\"default\\":{}},\\"fontSize\\":{\\"default\\":\\"1rem\\"},\\"padding\\":{\\"default\\":\\"0.5rem 0\\"},\\"margin\\":{\\"default\\":\\"0.125rem 0 0\\"}},\\"formCheck\\":{\\"margin\\":{\\"labelBottom\\":\\"0\\",\\"inputLeft\\":\\"0\\",\\"inputTop\\":\\"0\\",\\"inputRight\\":\\"0.3125rem\\",\\"inlineRight\\":\\"0.75rem\\"},\\"padding\\":{\\"inlineLeft\\":\\"0\\"}},\\"formCheckInput\\":{\\"colors\\":{\\"default\\":{}},\\"margin\\":{\\"top\\":\\"0.3rem\\",\\"left\\":\\"0rem\\"}},\\"formControl\\":{\\"colors\\":{\\"default\\":{}},\\"boxShadow\\":{\\"default\\":\\"0 0 0 0.2rem\\"},\\"padding\\":{\\"smRight\\":\\"0\\",\\"smLeft\\":\\"0\\",\\"lgRight\\":\\"0\\",\\"lgLeft\\":\\"0\\",\\"smPadding\\":\\"0.25rem 0.5rem\\",\\"lgPadding\\":\\"0.5rem 1rem\\",\\"defaultPadding\\":\\"0.375rem 0.75rem\\"},\\"fontSize\\":{\\"sm\\":\\"0.875rem\\",\\"lg\\":\\"1.25rem\\",\\"default\\":\\"1rem\\"},\\"height\\":{\\"select\\":\\"calc(2.25rem + 2px)\\",\\"selectLg\\":\\"calc(2.875rem + 2px)\\",\\"selectSm\\":\\"calc(1.8125rem + 2px)\\"}},\\"formControlPlainText\\":{\\"colors\\":{\\"default\\":{}},\\"padding\\":{\\"top\\":\\"0.375rem\\",\\"bottom\\":\\"0.375rem\\",\\"smRight\\":\\"0\\",\\"smLeft\\":\\"0\\"},\\"margin\\":{\\"bottom\\":\\"0\\"}},\\"formGroup\\":{\\"margin\\":{\\"inlineBottom\\":\\"0\\",\\"nombNoRow\\":\\"0\\",\\"nombRowRight\\":\\"-5px\\",\\"nombRowLeft\\":\\"-5px\\",\\"nombRowDivLabelBottom\\":\\"0\\",\\"nombRowBottom\\":\\"0\\",\\"rowRight\\":\\"-5px\\",\\"rowLeft\\":\\"-5px\\",\\"rowDivLabel\\":\\"0\\",\\"bottom\\":\\"1rem\\"},\\"padding\\":{\\"labelTopLg\\":\\"calc(0.5rem + 1px)\\",\\"labelBottomLg\\":\\"calc(0.5rem + 1px)\\",\\"inputRightLg\\":\\"0\\",\\"inputLeftLg\\":\\"0\\",\\"inputLg\\":\\"0.5rem 1rem\\",\\"labelTopSm\\":\\"calc(0.25rem + 1px)\\",\\"labelBottomSm\\":\\"calc(0.25rem + 1px)\\",\\"inputRightSm\\":\\"0\\",\\"inputLeftSm\\":\\"0\\",\\"inputSm\\":\\"0.25rem 0.5rem\\"}},\\"formText\\":{\\"colors\\":{\\"default\\":{}},\\"margin\\":{\\"top\\":\\"0.25rem\\"}},\\"inputGroup\\":{\\"padding\\":{\\"leftLg\\":\\"0\\",\\"rightLg\\":\\"0\\",\\"lg\\":\\"0.5rem 1rem\\",\\"leftSm\\":\\"0\\",\\"rightSm\\":\\"0\\",\\"sm\\":\\"0.25rem 0.5rem\\"},\\"margin\\":{\\"bottom\\":\\"0\\"}},\\"inputGroupText\\":{\\"colors\\":{\\"default\\":{}},\\"margin\\":{\\"bottom\\":\\"0\\",\\"radioCheckboxTop\\":\\"0\\",\\"radioCheckboxRight\\":\\"0\\",\\"radioCheckboxBottom\\":\\"0\\"},\\"padding\\":{\\"default\\":\\"0.375rem 0.75rem\\"},\\"fontWeight\\":{\\"default\\":\\"400\\"}},\\"jumbotron\\":{\\"colors\\":{\\"default\\":{}},\\"padding\\":{\\"sm\\":\\"4rem 2rem\\",\\"fluidRight\\":\\"0\\",\\"fluidLeft\\":\\"0\\",\\"pill\\":\\"2rem 8rem\\",\\"lgPill\\":\\"4rem 8rem\\",\\"smPill\\":\\"4rem 4rem\\",\\"default\\":\\"2rem 1rem\\"}},\\"listGroup\\":{\\"padding\\":{\\"left\\":\\"0\\"},\\"margin\\":{\\"bottom\\":\\"0\\"},\\"border\\":{\\"aLiFlushRight\\":\\"0\\",\\"aLiFlushLeft\\":\\"0\\",\\"aLiFlushFirstChildTop\\":\\"0\\",\\"aLiFlushLastChildBottom\\":\\"0\\"}},\\"listGroupItem\\":{\\"colors\\":{\\"primary\\":{},\\"secondary\\":{},\\"success\\":{},\\"info\\":{},\\"warning\\":{},\\"danger\\":{},\\"light\\":{},\\"dark\\":{},\\"default\\":{}},\\"padding\\":{\\"default\\":\\"0.75rem 1.25rem\\"}},\\"modalBody\\":{\\"padding\\":{\\"default\\":\\"1rem\\"}},\\"modalContent\\":{\\"colors\\":{\\"default\\":{}}},\\"modalFooter\\":{\\"colors\\":{\\"default\\":{}},\\"padding\\":{\\"default\\":\\"1rem\\"}},\\"modalHeader\\":{\\"colors\\":{\\"default\\":{}},\\"padding\\":{\\"default\\":\\"1rem\\"}},\\"nav\\":{\\"colors\\":{\\"default\\":{}},\\"padding\\":{\\"collapseNotHiddenARight\\":\\"0.5rem\\",\\"collapseNotHiddenALeft\\":\\"0.5rem\\",\\"left\\":\\"0\\"},\\"margin\\":{\\"bottom\\":\\"0\\"}},\\"navLink\\":{\\"colors\\":{\\"light\\":{}},\\"padding\\":{\\"default\\":\\"0.5rem\\"}},\\"navbar\\":{\\"colors\\":{\\"dark\\":{},\\"light\\":{}},\\"padding\\":{\\"default\\":\\"0.5rem 1rem\\"}},\\"navbarLink\\":{\\"colors\\":{\\"dark\\":{},\\"light\\":{}},\\"padding\\":{\\"brandTop\\":\\"0.3125rem\\",\\"brandBottom\\":\\"0.3125rem\\"}},\\"popover\\":{\\"colors\\":{\\"default\\":{}},\\"fontWeight\\":{\\"default\\":\\"400\\"},\\"margin\\":{\\"topBottom\\":\\"0.5rem\\",\\"leftRight\\":\\"0.5rem\\",\\"bottomTop\\":\\"0.5rem\\",\\"rightLeft\\":\\"0.5rem\\"},\\"fontFamily\\":{\\"default\\":\\" -apple-system, BlinkMacSystemFont, \\\\\\"Segoe UI\\\\\\", Roboto, \\\\\\"Helvetica Neue\\\\\\", Arial, sans-serif, \\\\\\"Apple Color Emoji\\\\\\", \\\\\\"Segoe UI Emoji\\\\\\", \\\\\\"Segoe UI Symbol\\\\\\"\\"}},\\"popoverArrow\\":{\\"colors\\":{\\"default\\":{}}},\\"popoverBody\\":{\\"colors\\":{\\"default\\":{}},\\"padding\\":{\\"default\\":\\"0.5rem 0.75rem\\"}},\\"popoverHeader\\":{\\"colors\\":{\\"default\\":{}},\\"padding\\":{\\"default\\":\\"0.5rem 0.75rem\\"},\\"margin\\":{\\"bottom\\":\\"0\\",\\"top\\":\\"0\\",\\"beforeLeft\\":\\"-0.5rem\\"}},\\"screenSize\\":{\\"sm\\":\\"576px\\",\\"md\\":\\"768px\\",\\"lg\\":\\"992px\\",\\"xl\\":\\"1200px\\"},\\"table\\":{\\"colors\\":{\\"light\\":{},\\"padding\\":{\\"sm\\":\\"0.3rem\\"}}},\\"tr\\":{\\"colors\\":{\\"primary\\":{},\\"secondary\\":{},\\"success\\":{},\\"info\\":{},\\"warning\\":{},\\"danger\\":{},\\"light\\":{},\\"dark\\":{}}},\\"tooltip\\":{\\"margin\\":{\\"default\\":\\"0\\"},\\"fontWeight\\":{\\"default\\":\\"400\\"},\\"padding\\":{\\"leftRight\\":\\"0 0.4rem\\",\\"topBottom\\":\\"0.4rem 0\\"},\\"fontFamily\\":{\\"default\\":\\"-apple-system, BlinkMacSystemFont, \\\\\\"Segoe UI\\\\\\", Roboto, \\\\\\"Helvetica Neue\\\\\\", Arial, sans-serif, \\\\\\"Apple Color Emoji\\\\\\", \\\\\\"Segoe UI Emoji\\\\\\", \\\\\\"Segoe UI Symbol\\\\\\"\\"},\\"fontSize\\":{\\"default\\":\\"0.875rem\\"}},\\"tooltipArrow\\":{\\"colors\\":{\\"default\\":{}}},\\"tooltipInner\\":{\\"colors\\":{\\"default\\":{}},\\"padding\\":{\\"default\\":\\"0.25rem 0.5rem\\"}},\\"globals\\":{\\"borderRadius\\":{\\"noRadius\\":\\"0\\",\\"pill\\":\\"10rem\\",\\"sm\\":\\"0.2rem\\",\\"lg\\":\\"0.3rem\\",\\"default\\":\\"0.25rem\\"},\\"fontSize\\":{\\"sm\\":\\"0.875rem\\",\\"lg\\":\\"1.25rem\\",\\"default\\":\\"1rem\\",\\"toggle\\":\\"1.25rem\\"},\\"padding\\":{\\"button\\":{\\"sm\\":\\"0.25rem 0.5rem\\",\\"lg\\":\\"0.5rem 1rem\\",\\"default\\":\\"0.375rem 0.75rem\\"}},\\"border\\":{\\"default\\":\\"1px solid\\",\\"bottomTop\\":\\"2px solid\\"}}}"`;

exports[`Simply check if all components are imported and exported correctly 17`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  box-sizing: border-box;
}

@media (min-width:576px) {
  .c0 {
    max-width: 540px;
    box-sizing: border-box;
  }
}

@media (min-width:768px) {
  .c0 {
    max-width: 720px;
  }
}

@media (min-width:992px) {
  .c0 {
    max-width: 960px;
  }
}

@media (min-width:1200px) {
  .c0 {
    max-width: 1140px;
  }
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 18`] = `
.c0 {
  position: relative;
  display: inline-block;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 19`] = `
.c0 {
  padding: 0.25rem 1.5rem;
  clear: both;
  font-weight: 400;
  color: #2d2f31;
  text-align: inherit;
  white-space: nowrap;
  background-color: transparent;
  border: 0;
}

.c0:hover,
.c0:focus {
  color: #212529;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f0f0f0;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 20`] = `
.c0 {
  position: absolute;
  top: 100%;
  z-index: 1000;
  float: left;
  min-width: 10rem;
  padding: 0.5rem 0;
  margin: 0.125rem 0 0;
  font-size: 1rem;
  color: #2d2f31;
  text-align: left;
  list-style: none;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid rgba(0,0,0,0.15);
  border-radius: 0.25rem;
  display: block;
  left: 0;
}

<div
  className="c0"
  hidden={false}
/>
`;

exports[`Simply check if all components are imported and exported correctly 21`] = `
.c0 {
  height: 0;
  padding-top: 0.5rem;
  margin-top: 0.6rem;
  border-top: 1px solid #e2e6ea;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 22`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  display: block;
}

.c0 > label {
  margin-bottom: 0;
}

.c0 > input {
  position: static;
  margin-top: 0;
  margin-right: 0.3125rem;
  margin-left: 0;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 23`] = `
.c0 {
  margin-top: 0.3rem;
  margin-left: 0rem;
  box-sizing: border-box;
}

<input
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 24`] = `
.c0 {
  display: block;
  width: 100%;
  line-height: 1.5;
  color: #343a40;
  background-clip: padding-box;
  -webkit-transition: border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  box-sizing: border-box;
  background-color: #fff;
  border: 1px solid #abaeb1;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  border-radius: 0.25rem;
}

.c0::-ms-expand {
  background-color: transparent;
  border: 0;
}

.c0:focus {
  color: #343a40;
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(0,0,0,0.15);
}

.c0::-webkit-input-placeholder {
  color: #6c757d;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #6c757d;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #6c757d;
  opacity: 1;
}

.c0::placeholder {
  color: #6c757d;
  opacity: 1;
}

.c0:focus {
  background-color: #fff;
}

.c0:focus {
  border-color: #abaeb1;
}

.c0:focus {
  box-shadow: 0;
}

<input
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 25`] = `
.c0 {
  display: block;
  width: 100%;
  box-sizing: border-box;
}

<input
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 26`] = `
.c0 {
  width: 100%;
  padding-top: 0.375rem;
  padding-bottom: 0.375rem;
  margin-bottom: 0;
  line-height: 1.5;
  background-color: transparent;
  border: solid transparent;
  border-width: 1px 0;
  box-sizing: border-box;
  display: block;
}

<input
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 27`] = `
.c0 {
  box-sizing: border-box;
  margin-bottom: 1rem;
}

.c0 > input,
.c0 > div > input,
.c0 > :not(input[type=file]),
.c0 > div > :not(input[type=file]) {
  border-radius: 0.25rem;
}

.c0 > input,
.c0 > div > input,
.c0 > label,
.c0 > div > label {
  line-height: 1.5;
}

.c0 > input,
.c0 > div > input,
.c0 > label,
.c0 > div > label {
  font-size: 1rem;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 28`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

<form
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 29`] = `
.c0 {
  display: block;
  margin-top: 0.25rem;
  box-sizing: border-box;
}

<small
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 30`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: 100%;
  line-height: 1.5;
}

.c0 > input,
.c0 > textarea,
.c0 > select {
  position: relative;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 1%;
  margin-bottom: 0;
}

.c0 > input:not(:last-child),
.c0 > textarea:not(:last-child),
.c0 > select:not(:last-child) {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c0 > input:not(:first-child),
.c0 > textarea:not(:first-child),
.c0 > select:not(:first-child) {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c0 > input {
  border-radius: 0.25rem;
}

.c0 > div > span,
.c0 > input {
  line-height: 1.5;
  font-size: 1rem;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 31`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -1px;
}

.c0 > button {
  position: relative;
  z-index: 2;
}

.c0 > span,
.c0 > button {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c0 > span:not(:last-child),
.c0 > button:not(:last-child) {
  margin-right: -1px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 32`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: -1px;
}

.c0 > button {
  position: relative;
  z-index: 2;
}

.c0 > span,
.c0 > button {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c0 > span:not(:first-child),
.c0 > button:not(:first-child) {
  margin-left: -1px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 33`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.375rem 0.75rem;
  margin-bottom: 0;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #343a40;
  text-align: center;
  white-space: nowrap;
  background-color: #e2e6ea;
  border: 1px solid #cccecf;
  border-radius: 0.25rem;
}

.c0 input[type="radio"],
.c0 input[type="checkbox"] {
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
}

<span
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 34`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  padding-right: 15px;
  padding-left: 15px;
  width: 100%;
}

@media (min-width:576px) {
  .c0 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 35`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  list-style: none;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 36`] = `
.c0 {
  margin-bottom: 2rem;
  background-color: #f0f0f0;
  padding: 2rem 1rem;
  border-radius: 0.3rem;
}

@media (min-width:576px) {
  .c0 {
    padding: 4rem 2rem;
  }
}

@media (max-width:768px) {
  .c0 {
    padding: 4rem 2rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 37`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 0;
  margin-bottom: 0;
}

<ul
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 38`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #343a40;
  background-color: #fff;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

<li
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 39`] = `
.c0 {
  -webkit-transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  visibility: visible;
  opacity: 1;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  pointer-events: auto;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid rgba(0,0,0,0.2);
  outline: 0;
  border-radius: 0.3rem;
}

.c2 {
  position: relative;
  margin: auto;
  padding: 0.5rem;
  min-height: calc(100% - (0.5rem * 2));
  pointer-events: none;
  max-width: 500px;
}

.c4 {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1040;
  width: 100vw;
  height: 100vh;
  background-color: #111111;
  opacity: 0.7;
  display: block;
}

.c1 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1050;
  overflow: hidden;
  outline: 0;
  overflow-x: hidden;
  overflow-y: auto;
  display: block;
}

<div
  className="c0"
  hidden={false}
>
  <div
    className="c1"
    onClick={[Function]}
    onMouseDown={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      />
    </div>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`Simply check if all components are imported and exported correctly 40`] = `
.c0 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1050;
  overflow: hidden;
  outline: 0;
  overflow-x: hidden;
  overflow-y: auto;
  display: block;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 41`] = `
.c0 {
  position: relative;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 1rem;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 42`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  pointer-events: auto;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid rgba(0,0,0,0.2);
  outline: 0;
  border-radius: 0.3rem;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 43`] = `
.c0 {
  position: relative;
  margin: auto;
  padding: 0.5rem;
  min-height: calc(100% - (0.5rem * 2));
  pointer-events: none;
  max-width: 500px;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 44`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 1rem;
  border-top: 1px solid rgba(0,0,0,0.2);
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 45`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1rem;
  border-bottom: 1px solid rgba(0,0,0,0.2);
  border-top-left-radius: 0.3rem;
  border-top-right-radius: 0.3rem;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 46`] = `
.c0 {
  margin-bottom: 0;
  line-height: 1.5;
}

<h4
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 47`] = `
.c0 {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1040;
  width: 100vw;
  height: 100vh;
  background-color: #111111;
  opacity: 0.7;
  display: block;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 48`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
}

.c0 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:last-child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<nav
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 49`] = `
.c0 {
  display: block;
  padding: 0.5rem;
  border: 1px solid transparent;
  color: #007bff;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus {
  color: #0069d9;
}

<a
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 50`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.5rem 1rem;
  color: rgba(0,0,0,0.5);
  border-color: rgba(0,0,0,0.1);
  background-color: #f0f0f0 !important;
}

<nav
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 51`] = `
.c0 {
  display: block;
  padding: 0.5rem;
  border: 1px solid transparent;
  color: #007bff;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  color: rgba(0,0,0,0.5);
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus {
  color: #0069d9;
}

.c0:hover,
.c0:focus {
  color: rgba(0,0,0,0.75);
}

<a
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 52`] = `
.c0 {
  -webkit-transition: visibility 250ms ease-out 0ms, opacity 250ms ease-out 0ms;
  transition: visibility 250ms ease-out 0ms, opacity 250ms ease-out 0ms;
  visibility: visible;
  opacity: 1;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1060;
  max-width: 276px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-style: normal;
  font-weight: 400;
  line-height: 1.5;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-shadow: none;
  text-transform: none;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  word-break: normal;
  word-spacing: normal;
  white-space: normal;
  line-break: auto;
  font-size: 0.875rem;
  word-wrap: break-word;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid rgba(0,0,0,0.25);
  border-radius: 0.3rem;
  margin-left: 0.5rem;
}

<div
  className="c0"
  hidden={false}
>
  <div
    className="c1"
  />
</div>
`;

exports[`Simply check if all components are imported and exported correctly 53`] = `
.c0 {
  position: absolute;
  display: block;
  width: 1rem;
  margin: 0 0.3rem;
}

.c0::before,
.c0::after {
  position: absolute;
  display: block;
  content: "";
  border-color: transparent;
  border-style: solid;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 54`] = `
.c0 {
  padding: 0.5rem 0.75rem;
  color: #2d2f31;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 55`] = `
.c0 {
  top: 0;
  left: 50%;
  display: block;
  content: "";
  padding: 0.5rem 0.75rem;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 1rem;
  color: inherit;
  background-color: #f0f0f0;
  border-bottom: 1px solid #e2e6ea;
  border-top-left-radius: calc(0.3rem - 1px);
  border-top-right-radius: calc(0.3rem - 1px);
}

.c0::before {
  position: absolute;
  top: 0;
  left: 50%;
  display: block;
  width: 1rem;
  margin-left: -0.5rem;
  content: "";
  border-bottom: 1px solid #f0f0f0;
}

.c0:empty {
  display: none;
}

<h4
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 56`] = `
.c1 {
  width: 100%;
  max-width: 100%;
  margin-bottom: 1rem;
  border-collapse: collapse;
  background-color: transparent;
}

.c1 th {
  text-align: inherit;
}

.c1 th,
.c1 td {
  padding: 0.75rem;
  vertical-align: top;
  border-top: 1px solid #d6d8d9;
}

.c1 thead th {
  vertical-align: bottom;
  border-bottom: 2px solid #d6d8d9;
}

.c1 tbody + tbody {
  border-top: 2px solid #d6d8d9;
}

.c1 + .c0 {
  background-color: #fff;
}

<table
  className="c0 c1"
/>
`;

exports[`Simply check if all components are imported and exported correctly 57`] = `
.c0 > th,
.c0 > td {
  background-color: #b4b5b7;
}

.hover .c0:hover > th,
.hover .c0:hover > td,
.hover .c0 tbody tr:hover,
.hover .c0 tbody tr:hover > th,
.hover .c0 tbody tr:hover > td {
  background-color: #6c757d;
}

<tr
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 58`] = `
.c0 {
  -webkit-transition: visibility 150ms ease-out 0ms, opacity 150ms ease-out 0ms;
  transition: visibility 150ms ease-out 0ms, opacity 150ms ease-out 0ms;
  visibility: visible;
  opacity: 1;
}

.c1 {
  position: absolute;
  z-index: 1070;
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-style: normal;
  font-weight: 400;
  line-height: 1.5;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-shadow: none;
  text-transform: none;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  word-break: normal;
  word-spacing: normal;
  white-space: normal;
  line-break: auto;
  font-size: 0.875rem;
  word-wrap: break-word;
  opacity: 0.9;
  padding: 0.4rem 0;
}

<div
  className="c0"
  hidden={false}
>
  <div
    className="c1"
  />
</div>
`;

exports[`Simply check if all components are imported and exported correctly 59`] = `
.c0 {
  position: absolute;
  display: block;
  width: 0.8rem;
  height: 0.4rem;
}

.c0::before {
  position: absolute;
  content: "";
  border-color: transparent;
  border-style: solid;
}

<div
  className="c0"
/>
`;

exports[`Simply check if all components are imported and exported correctly 60`] = `
.c0 {
  max-width: 200px;
  padding: 0.25rem 0.5rem;
  color: #fff;
  text-align: center;
  background-color: #2d2f31;
  border-radius: 0.25rem;
}

<div
  className="c0"
/>
`;
